<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.philipgraf.android.fitness.ui.GoalActivity">

    <TextView
        android:id="@+id/goal_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goal_message" />

    <EditText
        android:id="@+id/goal_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/goal_msg"
        android:inputType="numberDecimal"
        android:hint="@string/weight" />

    <EditText
        android:id="@+id/goal_fat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/goal_weight"
        android:inputType="numberDecimal"
        android:hint="@string/fat" />

    <EditText
        android:id="@+id/goal_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/goal_fat"
        android:inputType="number"
        android:hint="@string/within_weeks" />

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        style="@style/button"
        android:text="@string/btn_finish"/>

</RelativeLayout>