<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.philipgraf.android.fitness.ui.StartDataActivity">

    <TextView
        android:id="@+id/start_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/start_message"/>

    <EditText
        android:id="@+id/start_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_msg"
        android:inputType="numberDecimal"
        android:hint="@string/weight"/>

    <EditText
        android:id="@+id/start_fat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_weight"
        android:inputType="numberDecimal"
        android:hint="@string/fat"/>

    <Button
        android:id="@+id/start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_fat"
        android:background="@color/background"
        android:text="@string/choice_start_date" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        style="@style/button"
        android:text="@string/next" />

</RelativeLayout>
